<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.behappy</groupId>
        <artifactId>maven-test</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <groupId>org.behappy</groupId>
    <artifactId>tpantlr2</artifactId>

    <properties>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
        </dependency>
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4</artifactId>
        </dependency>
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>ST4</artifactId>
        </dependency>
        <dependency>
            <groupId>com.ibm.icu</groupId>
            <artifactId>icu4j</artifactId>
            <version>75.1</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerVersion>${jdk.version}</compilerVersion>
                    <compilerArgs>
                        <compilerArg>--enable-preview</compilerArg>
                        <arg>--add-modules=jdk.incubator.vector</arg>
                        <arg>--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED</arg>
                    </compilerArgs>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>antlr4</goal>
                        </goals>
                        <phase>generate-sources</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${basedir}/target/generated-sources/antlr4/</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>src/main/antlr4/api</directory>
                                    <includes>
                                        <include>*.tokens</include>
                                    </includes>
                                    <excludes>
                                        <exclude>tour/Demo.java</exclude>
                                    </excludes>
                                </resource>
                                <resource>
                                    <directory>src/main/antlr4</directory>
                                    <includes>
                                        <include>**/*.java</include>
                                    </includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
<!--            <plugin>-->
<!--                <groupId>com.coderplus.maven.plugins</groupId>-->
<!--                <artifactId>copy-rename-maven-plugin</artifactId>-->
<!--                <version>1.0</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>copy-file</id>-->
<!--                        <phase>generate-sources</phase>-->
<!--                        <goals>-->
<!--                            <goal>copy</goal>-->
<!--                        </goals>-->
<!--                        <configuration>-->
<!--&lt;!&ndash;                            <sourceFile>antlr4/SimpleLexer.tokens</sourceFile>&ndash;&gt;-->
<!--                            <sourceFile>pom.xml</sourceFile>-->
<!--                            <destinationFile>target/pom.xml</destinationFile>-->
<!--                        </configuration>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
        </plugins>
    </build>
</project>